--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div id="welcome-user"></div>
+  <div id="welcome-user">
     <% if @user == current_user %>
       <h1>Welcome Back <%= @user.first_name %>!</h1>
     <% else %>
