--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,4 @@
-<div id="listingShow">
+<div id="listingShow" data-id="<%=@listing.id%>">
   <%= render 'listing_preview' %>
 
   <div id="spot-info">
