Fix responsiveness of map on show page

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -23,7 +23,7 @@
 <% end %>
 
   <div id="static-map">
-    <%= image_tag @map_image, id: "listing-show-map" %>
+    <%= image_tag @map_image, id: "listing-show-map", class: "img-responsive" %>
   </div>
 
 
@@ -63,6 +63,6 @@
 	</div>
 	<div id="totalDisplay"></div>
 	<button id="saveFilterButton" class="btn btn-primary btn-lg btn-block" onclick="confirmBooking()">Continue to Payment</button>
-</div> 
+</div>
 
 
