Move the total to the top of the listing page

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -18,6 +18,12 @@
 li{
   list-style-type: none;
 }
+#total-container{
+  display:inline;
+}
+#totalDisplay{
+  display:inline;
+}
 
 
 /*#static-map {
