--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -46,6 +46,7 @@
 </div>
 
 <div id="availabilityFilter" class="hide">
+	<p id="total-container">Total: $<div id="totalDisplay">0</div></p>
 	<select class="form-control" id="vehicleClassSelect">
 		<option value="0">Compact Vehicle</option>
 		<option value="1">Full Size Vehicle</option>
@@ -61,7 +62,6 @@
 
 		</table>
 	</div>
-	<div id="totalDisplay"></div>
 	<button id="saveFilterButton" class="btn btn-primary btn-lg btn-block" onclick="confirmBooking()">Continue to Payment</button>
 </div>
 
