--- a/app/views/bookings/confirmation.html.erb
+++ b/app/views/bookings/confirmation.html.erb
@@ -1,6 +1,18 @@
 <h1>Booking Confirmation</h1>
-<p>Your total is <%=@total%></p>
+<p>Your total is $<%=@total%></p>
 <p>Your selected times</p>
-<%@confirmed_times.each do |time|%>
+<%@confirmed_times.sort!.each do |time|%>
 	<p><%=time%></p>
 <%end%>
+
+<form action="/listings/<%= @listing.id %>/bookings/complete" method="GET">
+  <script
+    src="https://checkout.stripe.com/checkout.js"
+    class="stripe-button"
+    data-key="pk_test_GNkZKnVDlMTTXnR2mFFpBWQp"
+    data-image="/doge.jpeg"
+    data-name="drivewaze"
+    data-description="Charge for driveway rental"
+    data-amount="<%= @total %>00">
+  </script>
+</form>
