--- a/app/views/bookings/order-complete.html.erb
+++ b/app/views/bookings/order-complete.html.erb
@@ -1,3 +1,4 @@
-<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+<h2>You've reserved your spc</h2>
+<p>Thanks for your order <%= current_user.first_name %>!</p>
 
 <%= link_to "Message your parking provider" , new_booking_message_path(@booking)  %>
