begin to add tabs

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,6 +31,14 @@
     <p> Description: <%= @user.description %> </p>
   </div>
 
+  <div id = "tabs">
+    <ul>
+      <li><a href="#user-listings">Available Listings</a></li>
+      <li><a href="#user-reviews">Reviews</a></li>
+      <li><a href="#favorite-listings">Favorited Listings</a></li>
+      <li><a href="#favorite-users">Favorited Users</a></li>
+    </ul>
+
   <div id="user-listings">
     <h3>Available Listings:</h3>
     <ol>
@@ -84,6 +92,7 @@
       <% end %>
     </ul>
   </div>
+
   <div id="favorite-users">
     <h3> Favorited Users </h3>
     <ul>
@@ -95,7 +104,10 @@
     </ul>
   </div>
 
+  </div>
+
   <% if @user == current_user %>
     <p><%= link_to "Edit", user_edit_path %> | <%= link_to "Delete", user_delete_path(@user), method: :delete %> My Profile</p>
   <% end %>
 </div>
+
