Add mailers to providers when a user rents with them

--- a/app/views/user_mailer/booked.html.erb
+++ b/app/views/user_mailer/booked.html.erb
@@ -1,1 +1,18 @@
-booked.html.erb
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<h1>spcs</h1>
+
+	<p>Dear <%= @listing.user.first_name %>,</p>
+	<p></p>
+	<p>Mazel Tov! <%= @renter.first_name %> wants to rent your space at <%= @listing.address %> between <%= @booking.time_slots.first.start_time.to_s %> and <%= @booking.time_slots.last.end_time.to_s %>.</p>
+
+	<p>Why not log in and send them a message?</p>
+
+	<p>Sincerely,</p>
+	<p>Team spcs</p>
+</body>
+</html>
