Add additional listing seeds without parking spots and add $ to the listing show page

--- a/app/views/listings/_listing_preview.html.erb
+++ b/app/views/listings/_listing_preview.html.erb
@@ -10,9 +10,9 @@
 
 <div id='listing-price-info'>
     <ul>
-      <li>Daily Price: <%= @listing.parking_slots.first.daily_price %></li>
-      <li>Weekly Price: <%= @listing.parking_slots.first.weekly_price %></li>
-      <li>Monthly Price: <%= @listing.parking_slots.first.monthly_price %></li>
+      <li>Daily Price: $<%= @listing.parking_slots.first.daily_price %></li>
+      <li>Weekly Price: $<%= @listing.parking_slots.first.weekly_price %></li>
+      <li>Monthly Price: $<%= @listing.parking_slots.first.monthly_price %></li>
     </ul>
   </div>
   <div id="parking-spot-info">
