change messages to text area

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div id = "body">
     <%= label_tag :body %>
-    <%= text_field_tag :body, nil, :id => "msgText" %>
+    <%= text_area_tag :body, nil, :id => "msgText" %>
   </div>
 
   <div class = "submit">
