make messages more message looking

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -56,28 +56,28 @@ background-image: -webkit-gradient(
   word-wrap: break-word;
 }
 
-.bubble--alt {
-  background-image: linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-background-image: -o-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-background-image: -moz-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-background-image: -webkit-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-background-image: -ms-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-background-image: -webkit-gradient(
-  linear,
-  left bottom,
-  left top,
-  color-stop(0.25, rgb(172,228,75)),
-  color-stop(1, rgb(122,205,71))
-);
-  float: right;
+.bubble:before, .bubble:after {
+  border-radius: 20px / 10px;
+  content: '';
+  display: block;
+  position: absolute;
 }
 
-.bubble--alt:before {
+.bubble:before {
+  border: 10px solid transparent;
   border-bottom-color: rgba(0, 0, 0, 0.5);
-  border-radius: 20px / 10px;
-  left: auto;
-  right: -7px;
+  bottom: 0;
+  left: -7px;
+  z-index: -2;
 }
+
+.bubble:after {
+  border: 8px solid transparent;
+  border-bottom-color: #d2f4fe;
+  bottom: 1px;
+  left: -5px;
+}
+
 
 /*#static-map {
   width: 100%;
