fix bubble layout

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -101,6 +101,13 @@ background-image: -webkit-gradient(
   right: -7px;
 }
 
+.bubble--alt:after {
+  border-bottom-color: #ace44b;
+  border-radius: 20px / 10px;
+  left: auto;
+  right: -5px;
+}
+
 /*#static-map {
   width: 100%;
   margin: 0 auto;
