Have messages be in a scrolling div and scroll to the bottom of the div so you can see most recent messages

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -27,6 +27,10 @@ li{
 #message-title{
   text-align: center;
 }
+#messages{
+  height: 300px;
+  overflow-y: auto;
+}
 
 .bubble {
   background-image: linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
