--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,7 +1,7 @@
 
 <div class = "new-message-container">
 
-<h3 class="row"> Chat about your rental at <%= link_to @booking.listing.address, listing_path(@booking.listing) %></h3>
+<h2 class="row" id="message-title"> Chat about your rental at <%= link_to @booking.listing.address, listing_path(@booking.listing) %></h2>
 
 <div id='messages' class="row">
 </div>
@@ -13,7 +13,7 @@
   data-to-user-id="<%= @booking.other_party(current_user).id %>"
   data-booking-id="<%= @booking.id %>"
    ></div>
-  <div id = "to>">
+  <div id="to>">
     <%= label_tag :to %>
     <%= text_field_tag :receiver,@booking.receipient(current_user), :id => "toUser", :disabled=>true %>
     <%= hidden_field_tag "booking_id", @booking.id%>
@@ -22,13 +22,15 @@
     <%= label_tag :from %>
     <%= text_field_tag :sender, current_user.first_name, :id => "fromUser", :disabled=>true%>
   </div>
-  <div id = "body messaging-body">
-    <%= label_tag :body %>
-    <%= text_area_tag :body, nil, :id => "msgText" %>
-  </div>
 
-  <div class = "submit">
-    <%= submit_tag("Send Message") %>
+  <div class="row">
+    <div id="body messaging-body col-sm-9">
+      <%= text_area_tag :body, nil, :id => "msgText", class: "col-sm-9", rows: 4 %>
+    </div>
+
+    <div class="submit">
+      <%= submit_tag("Send Message", class: "col-sm-3 btn btn-default") %>
+    </div>
   </div>
   <% end %>
 </div>
