--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -31,6 +31,14 @@ li{
   height: 300px;
   overflow-y: auto;
 }
+#to-user-tag{
+  display: inline-block;
+  width: 40px;
+}
+#from-user-tag{
+  display: inline-block;
+  width: 40px;
+}
 
 .bubble {
   background-image: linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
