--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -28,7 +28,7 @@ li{
   text-align: center;
 }
 #messages{
-  height: 300px;
+  height: 80em;
   overflow-y: auto;
 }
 #to-user-tag{
@@ -38,6 +38,12 @@ li{
 #from-user-tag{
   display: inline-block;
   width: 40px;
+}
+#msgText{
+
+}
+#submit-message{
+  height: 80px;
 }
 
 .bubble {
