--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -25,11 +25,11 @@
 
   <div class="row">
     <div id="body messaging-body col-sm-9">
-      <%= text_area_tag :body, nil, :id => "msgText", class: "col-sm-9", rows: 4 %>
+      <%= text_area_tag :body, nil, :id => "msgText", class: "col-sm-9", rows: 4%>
     </div>
 
     <div class="submit">
-      <%= submit_tag("Send Message", class: "col-sm-3 btn btn-default") %>
+      <%= submit_tag("Send Message", class: "col-sm-3 btn btn-default", id: "submit-message") %>
     </div>
   </div>
   <% end %>
