--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -24,47 +24,50 @@ li{
 #totalDisplay{
   display:inline;
 }
-#message-title{
-  text-align: center;
+@media (max-width: 480px){
+  #message-title{
+    text-align: center;
+  }
+  #messages{
+    height: 63em;
+    overflow-y: auto;
+  }
+  #messages > div {
+    height: 160px;
+    font-size: 2.4em;
+  }
+  #to-user-tag{
+    display: inline-block;
+    width: 80px;
+    font-size: 2.2em;
+  }
+  #from-user-tag{
+    display: inline-block;
+    width: 80px;
+    font-size: 2.2em;
+  }
+  #toUser {
+    font-size: 2.2em;
+  }
+  #fromUser {
+    font-size: 2.2em;
+  }
+  #msgText{
+    font-size: 2.2em;
+  }
+  #submit-message{
+    height: 180px;
+  }
+  .navbar{
+    height: 2.2em;
+    padding-top: 15px;
+    font-size: 2.5em
+  }
+  #logo{
+    font-size: 1.5em
+  }
 }
-#messages{
-  height: 63em;
-  overflow-y: auto;
-}
-#messages > div {
-  height: 160px;
-  font-size: 2.4em;
-}
-#to-user-tag{
-  display: inline-block;
-  width: 80px;
-  font-size: 2.2em;
-}
-#from-user-tag{
-  display: inline-block;
-  width: 80px;
-  font-size: 2.2em;
-}
-#toUser {
-  font-size: 2.2em;
-}
-#fromUser {
-  font-size: 2.2em;
-}
-#msgText{
-  font-size: 2.2em;
-}
-#submit-message{
-  height: 180px;
-}
-.navbar{
-  height: 2.2em;
-  padding-top: 15px;
-  font-size: 2.5em
-}
-#logo{
-  font-size: 1.5em
-}
+
 
 .bubble {
   background-image: linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
