--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,11 +1,3 @@
-/*#search-div {
-  width: 100%;
-  height: 30vh;
-  text-align: center;
-  margin: 0 auto;
-  font-size:3em;
-}*/
-
 #map-container {
   width: 100%;
 }
@@ -152,44 +144,6 @@ background-image: -webkit-gradient(
   right: -5px;
 }
 
-/*#static-map {
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
-}
-
-#listing-show-map {
-  width: 100%;
-  max-width: 1000px;
-
-}
-
-input#term {
-  font-size: 1.5em;
-  margin-bottom: .5em;
-}
-
-input#search-submit {
-  font-size: 48px;
-  width: 200px;
-  display: block;
-  text-align: center;
-  margin: 0 auto;
-}
-
-.single-listing {
-  position: fixed;
-  bottom: 0;
-  background-color: white;
-  width: 100%;
-}
-
-#search-message {
-
-}
-
-*/
-
 .single-listing{
   cursor: pointer;
 }
@@ -209,4 +163,10 @@ input#term:focus {
 
 #logo {
   margin: 0;
+}
+
+@media (max-width: 800px) {
+  body {
+    font-size: 2em;
+  }
 }
