--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
   <div id="profile-pic" class="row">
     <div class = "col-xs-6 pull-left" id="user-profile-photo">
-      <%= image_tag @user.avatar.url(:medium), class: "img-rounded" %>
+      <%= image_tag @user.avatar.url(:thumb), class: "img-rounded" %>
     </div>
 
     <div id="profile-summary" class="col-xs-6 pull-right">
