--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <meta name="viewport" content="initial-scale=1.0">
   <title>spcs: Rent Parking Socially</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
 
