--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,68 +1,68 @@
-<div id="listingPageContainer">
 
-	<div id="listingPageAddress">
-		<h2>Your Address</h2>
-		<form id="newListingForm">
-			<div class="form-group">
-				<label for="address">Address</label>
-				<input type="text" name="address" id="listingAddress" class="form-control" placeHolder="123 Someplace St., New York, NY 10005">
-			</div>
-			<div class="form-group">
-				<button type="submit" class="btn btn-md btn-default">Continue</button>
-			</div>
-		</form>
-	</div><!--listingPageAddress-->
+	<div id="listingPageContainer" style="width:50%;">
 
-	<div id="listingPageInfo" class="hide">
-		<h3>Info</h3>
-		<div class="listingPhotoUpload"></div>
-		<div class="listingInfo">
-			<%=form_for @listing, html: { multipart: true }, class: "form-control" do |f|%>
-				<%=f.hidden_field :address%>
+		<div id="listingPageAddress">
+			<form id="newListingForm">
+				<div class="form-group">
+					<label for="address">Address</label>
+					<input type="text" name="address" id="listingAddress" class="form-control input-lg	" placeHolder="123 Someplace St., New York, NY 10005">
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn btn-md btn-default">Continue</button>
+				</div>
+			</form>
+		</div><!--listingPageAddress-->
+
+		<!-- <div id="listingPageInfo" class="hide">
+			<h3>Space Information</h3>
+			<div class="listingPhotoUpload"></div>
+			<div class="listingInfo">
+				<%=form_for @listing, html: { multipart: true }, class: "form-control" do |f|%>
+					<%=f.hidden_field :address%>
+					<div class="row">
+					<div class="form-group">
+						<%= f.file_field :photo, class: "col-xs-12" %>
+					</div>
+					</div>
+					<div class="row">
+					<div class="form-group">
+					<%=f.label :space_description, class: "col-xs-12"%>
+					<%=f.text_area :space_description, class: "col-xs-12"%>
+					</div>
+				</div>
+					<div class="row">
+					<div class="form-group">
+					<%=f.label :neighborhood_info, class: "col-xs-12" %>
+					<%=f.text_area :neighborhood_info, class: "col-xs-12" %>
+					</div>
+				</div>
+					<div class="row">
+					<div class="form-group">
+						<%=f.label :public_transit_info, class: "col-xs-12" %>
+						<%=f.text_area :public_transit_info, class: "col-xs-12" %>
+					</div>
+				</div>
+					<div class="row">
+					<div class="form-group">
+						<%=f.label :other_info, class: "col-xs-12" %>
+						<%=f.text_area :other_info, class: "col-xs-12" %>
+					</div>
+				</div>
 				<div class="row">
-				<div class="form-group">
-					<%= f.file_field :photo %>
+					<div class="form-group">
+						<%=f.label :rules, class: "col-xs-12" %>
+						<%=f.text_area :rules, class: "col-xs-12" %>
+					</div>
 				</div>
-				</div>
-				<div class="row">
-				<div class="form-group">
-				<%=f.label :space_description, class: "col-xs-2"%>
-				<%=f.text_area :space_description, class: "col-xs-10"%>
-				</div>
+					<%=f.submit "Continue", class: "col-xs-10 col-xs-offset-2"%>
+				<%end%>
 			</div>
-				<div class="row">
-				<div class="form-group">
-				<%=f.label :neighborhood_info, class: "col-xs-2" %>
-				<%=f.text_area :neighborhood_info, class: "col-xs-10" %>
-				</div>
-			</div>
-				<div class="row">
-				<div class="form-group">
-					<%=f.label :public_transit_info, class: "col-xs-2" %>
-					<%=f.text_area :public_transit_info, class: "col-xs-10" %>
-				</div>
-			</div>
-				<div class="row">
-				<div class="form-group">
-					<%=f.label :other_info, class: "col-xs-2" %>
-					<%=f.text_area :other_info, class: "col-xs-10" %>
-				</div>
-			</div>
-			<div class="row">
-				<div class="form-group">
-					<%=f.label :rules, class: "col-xs-2" %>
-					<%=f.text_area :rules, class: "col-xs-10" %>
-				</div>
-			</div>
-				<%=f.submit "Continue", class: "col-xs-10 col-xs-offset-2"%>
-			<%end%>
-		</div>
 
-		<div id="static-map">
-		  <%= image_tag @map_image, id: "listing-show-map" %>
-		</div>
+			<div id="static-map">
+			  <%= image_tag @map_image, id: "listing-show-map" %>
+			</div>
 
 
-	</div><!--listingPageInfo-->
+		</div> -->
+	</div>
 
-</div>
