--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,11 +1,11 @@
 
-	<div id="listingPageContainer" style="width:50%;">
+	<div id="listingPageContainer">
 
 		<div id="listingPageAddress">
 			<form id="newListingForm">
 				<div class="form-group">
 					<label for="address">Address</label>
-					<input type="text" name="address" id="listingAddress" class="form-control input-lg	" placeHolder="123 Someplace St., New York, NY 10005">
+					<input type="text" name="address" id="listingAddress" class="form-control" placeHolder="123 Someplace St., New York, NY 10005">
 				</div>
 				<div class="form-group">
 					<button type="submit" class="btn btn-md btn-default">Continue</button>
@@ -13,7 +13,7 @@
 			</form>
 		</div><!--listingPageAddress-->
 
-		<!-- <div id="listingPageInfo" class="hide">
+		<div id="listingPageInfo" class="hide">
 			<h3>Space Information</h3>
 			<div class="listingPhotoUpload"></div>
 			<div class="listingInfo">
@@ -21,7 +21,7 @@
 					<%=f.hidden_field :address%>
 					<div class="row">
 					<div class="form-group">
-						<%= f.file_field :photo, class: "col-xs-12" %>
+						<%= f.file_field :photo, class: "col-xs-12", id: 'listing-file-upload' %>
 					</div>
 					</div>
 					<div class="row">
@@ -54,15 +54,19 @@
 						<%=f.text_area :rules, class: "col-xs-12" %>
 					</div>
 				</div>
-					<%=f.submit "Continue", class: "col-xs-10 col-xs-offset-2"%>
+				<div class="row">
+					<div class="form-group">
+					<%=f.submit "Continue", class: "col-xs-12", id: "space-continue-btn"%>
+				</div>
+			</div>
 				<%end%>
 			</div>
 
 			<div id="static-map">
-			  <%= image_tag @map_image, id: "listing-show-map" %>
+			  <%= image_tag @map_image, id: "listing-show-map", class: "img-responsive" %>
 			</div>
 
 
-		</div> -->
+		</div>
 	</div>
 
